--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -1,1 +1,268 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Punish Me – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #960F2A;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 3px #ff758f, 0 0 3px #ff758f;
+      margin-bottom: 20px;
+      font-size: 38px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #ffb3c1;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #ff8ea6;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Punish Me</h1>
+  <p class="slogan">What you call defiance, I call foreplay.</p>
+  <p class="quote">“I may misbehave, but only to see if you're strong enough to put me in my place.”</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/punish_me_female.jpg" alt="Female Punish Me">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/punish_me_male.jpg" alt="Male Punish Me">
+    </div>
+  </div>
+    <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong><br>
+  The Punish Me archetype navigates intimacy through provocation. Their submission isn’t passive — it’s earned. They test limits to create connection, eroticizing resistance and power exchange. Their most fulfilling relationships come from being matched by someone who can confidently lead, discipline, and handle their intensity.</p>
+
+  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <ul>
+    <li>Playful resistance met with firm dominance → 📈 Intensity spike</li>
+    <li class="sub">The relationship deepens through erotic discipline</li>
+    <li>Defiance ignored or unmet → 📉 Frustration dip</li>
+    <li class="sub">They feel unseen or unworthy of correction</li>
+    <li>Domineering control without emotional nuance → ⚠️ Flatline</li>
+    <li class="sub">They lose trust and pull back</li>
+    <li>Responsive domination with emotional containment → 📊 Gradual incline</li>
+    <li class="sub">They surrender willingly and crave more</li>
+  </ul>
+
+  <p><strong>Ideal Dynamic:</strong><br>
+  The Punish Me archetype craves emotional containment and erotic punishment. They need partners who aren’t just dominant, but present — who use discipline as a language of love, not control. Trust grows when they’re punished *because* they matter, not *so that* they’ll behave.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>Their turn-ons are forged in defiance, attention, and intensity. This archetype eroticizes being handled — not because they’re weak, but because being met with strength feels like safety. They often associate punishment with love and dominance with devotion.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Attachment-Informed Kink Theory:</strong> Discipline becomes proof of presence. Punishment feels like proof they’re worth the trouble.</li>
+    <li><strong>Power Reciprocity Theory:</strong> Testing boundaries gives them agency. Being punished is their way of negotiating trust and control.</li>
+    <li><strong>Neurochemical Feedback Theory:</strong> Anticipation and correction trigger adrenaline and oxytocin. They bond through intensity.</li>
+    <li><strong>Psychodynamic Theory:</strong> Early messages around punishment and attention may have imprinted the belief that pain or rules equal care.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <ul>
+    <li>“Say it again. I dare you.”</li>
+    <li>“You think I’ll behave just because you told me to?”</li>
+    <li>“Go ahead. Make me.”</li>
+    <li>“What are you going to do about it?”</li>
+    <li>“If you don’t stop me, I won’t stop myself.”</li>
+    <li>“I like it when you’re mean.”</li>
+    <li>“Punish me properly. I want to remember it.”</li>
+    <li>“Are you strong enough to handle me?”</li>
+    <li>“Don’t just threaten me — do it.”</li>
+    <li>“I’m not sorry. Make me sorry.”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>Tests partner through sarcasm, defiance, or withdrawal</li>
+    <li>Pushes buttons to provoke a response or regain connection</li>
+    <li>May escalate intensity to feel emotionally held</li>
+    <li>Often doesn’t know how to ask for emotional safety directly</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>Being ignored after acting out</li>
+    <li>Feeling unworthy of discipline or attention</li>
+    <li>Domination that feels cold, performative, or disconnected</li>
+    <li>Being labeled “too much” or “too difficult”</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Responds best to confident containment, not coddling</li>
+    <li>Needs to know their intensity won’t scare someone away</li>
+    <li>Conflict resolves through erotic correction or emotional mirroring</li>
+    <li>Feels safest when rules are reinforced consistently, not reactively</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong><br>
+  Learning to express emotional needs without first creating chaos. Understanding that submission can be a gift, not a test. Surrendering not just in the body, but in the heart.</p>
+
+  <h2>Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong><br>
+  Their willingness to provoke makes everything feel electric. They bring tension, danger, and emotional rawness into the bedroom. What turns others off — stubbornness, fire, resistance — becomes the exact thing that turns *them* on. They’re unforgettable when matched by someone who sees their disobedience as an invitation, not a threat.</p>
+
+  <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+  Being ignored, emotionally neglected, or punished mechanically. Nothing kills the vibe faster than domination that lacks nuance. If a partner becomes predictable or disengaged, they’ll push harder — and eventually check out when they’re not met.</p>
+      <div class="section">
+      <h2>🔥 Erotic Short Story</h2>
+      <p>The ride home is only fifteen minutes, yet you have already spent ten of them poking at the person beside you.</p>
+      <p>It started at dinner. They warned you, quiet look across the table, palm sliding over your thigh, don’t flirt with anyone else. You agreed, then proceeded to do exactly that. Nothing dramatic. Just a lingering touch on a waiter’s wrist, a laugh a little too bright at a stranger’s joke, a flash of tongue on the rim of your glass while staring straight into your partner’s eyes.</p>
+      <p>Bratting. You do it on instinct.</p>
+      <p>Now the driver is up front, silent behind tinted glass, and you are pressed against the leather seat of a spacious town car. Your partner sits to your right, thigh against yours, impossible to read in the shadows. They have said barely a word since the restaurant.</p>
+      <p>That silence is the delicious part.</p>
+      <p>Your knee brushes theirs. No reaction. You sigh loudly, as if bored. Still nothing. Fine. Their gaze flicks down, then back up to the dark window. You swear you see a tight grin at the corner of their mouth.</p>
+      <p>Your pulse kicks up.</p>
+      <p>“Problem?” you ask, voice syrupy.</p>
+      <p>They turn at last. Calm. Deadly polite. “Not at all. But you seem restless.”</p>
+      <p>“I’m fine,” you say. “Unless you think I need… attention?”</p>
+      <p>They do not answer. They reach forward and tap the privacy button. The partition slides up, sealing the two of you off from the driver. Locked away.</p>
+      <p>Air shrinks. Your breath hitches.</p>
+      <p>They rest an arm on the back of the seat, eyes drifting over you inch by inch. Their voice goes mellow, instructive. “Hands in your lap.”</p>
+      <p>A command wrapped in velvet. You’ve lured it out of them, that desire to put you in your place. You do as you’re told, fingers twining, eager to see how they’ll punish you for misbehaving.</p>
+      <p>“I warned you.” Their tone is gentle. Far worse than anger. “You broke the rule anyway.”</p>
+      <p>Your chin tips up in faux bravado. “Maybe you need better rules.”</p>
+      <p>Silence. Then they lean close enough that their breath grazes your cheek. “Or maybe I need to make consequences more memorable.”</p>
+      <p>Heat flashes through your belly.</p>
+      <p>They take your wrists, lift them overhead, and pin them against the window. Not rough, just firm. Leather creaks. You squirm, thighs pressing together.</p>
+      <p>“Keep them there,” they say, releasing you. You do, trembling.</p>
+      <p>They slide a hand up your inner thigh, slow enough to make you whine. When that hand stops short of the place you ache, you bite back a complaint. The smirk that earns you tells you they heard it anyway.</p>
+      <p>“Let’s review,” they murmur. “Rule one. Do not tease others when you belong to me.”</p>
+      <p>“You think I belong to you…”</p>
+      <p>A sharp pinch on the tender skin above your knee steals the rest of the sentence. Pleasure sparks with pain. You gasp.</p>
+      <p>“Rule two,” they continue, “do not speak unless I ask a direct question.”</p>
+      <p>Your heartbeat thunders. The car turns a corner. City lights sweep across the ceiling, painting you both in gold, then gone again.</p>
+      <p>They unbuckle your seat belt, then theirs. You feel the car sway and realize your wrists are still overhead. Cool air kisses the tops of your thighs.</p>
+      <p>They hook a finger beneath your chin. “Look at me.”</p>
+      <p>You meet their eyes. Calm. Certain. They always know exactly how far to push. Why you push back.</p>
+      <p>“What happens when you are naughty?” they ask.</p>
+      <p>Your mouth goes desert dry. “I get punished.”</p>
+      <p>“And why do you want that?”</p>
+      <p>“Because punishment means attention,” you whisper.</p>
+      <p>“And?”</p>
+      <p>A rush of heat floods you. “Because it means you care enough to correct me.”</p>
+      <p>They hum approval. “Good brat.”</p>
+      <p>A shiver rolls through you. They sit back, thighs splayed, watching you hold position. Waiting. You know better than to beg. You wait too, body buzzing.</p>
+      <p>The car passes beneath a streetlamp. Light streaks across the glass roof. In that flash you see their pupils blown wide.</p>
+      <p>“Open your legs.”</p>
+      <p>Your knees part. A flush crawls up your chest.</p>
+      <p>“Wider.”</p>
+      <p>You obey. The stretch feels obscene in such a public space. Excitement coils tight.</p>
+      <p>They trail fingers up the inside of your thigh once more, nails grazing lightly. You twitch. When those fingers brush over your underwear, they pause.</p>
+      <p>“Already horny hmm,” they note. “Of course you are.”</p>
+      <p>They push the fabric aside and circle the slick heat they find. You moan before you can stop it.</p>
+      <p>They tilt their head, satisfied. “Hands still.”</p>
+      <p>You grip the roof handle harder. Their touch becomes strokes. Slow, deliberate. Not enough. You arch, seeking more friction. They withdraw.</p>
+      <p>“Count to thirty in your head,” they say, voice pleasant. “And do not move.”</p>
+      <p>You bite your lower lip. Thirty seconds feel like an hour when you want more than air inside you. Every muscle trembles with restraint.</p>
+      <p>You reach twenty-three before you shift. Barely. A micro tilt.</p>
+      <p>“Disobedient,” they murmur, catching your movement.</p>
+      <p>“I’m trying,” you breathe.</p>
+      <p>“I know.”</p>
+      <p>They slide two fingers inside without warning. You cry out, head thumping the seat. Their opposite hand clamps over your mouth.</p>
+      <p>“Quiet.”</p>
+      <p>The command thrums through you. They thrust slow, deep, curling. Your hips jerk, seeking more. They keep pace maddeningly steady.</p>
+      <p>You whimper under their palm. They smile.</p>
+      <p>“Such a handful,” they say, voice low. “But worth every correction.”</p>
+      <p>They withdraw fingers slick with you and lift them to your lips. “Suck.”</p>
+      <p>You suck willingly. The flavor of need coats your tongue.</p>
+      <p>They shift again, sliding low in the seat, belt loops tugging open. You watch, dazed, as they free themselves, flushed, and push your hips to guide you forward.</p>
+      <p>“Do what I like,” they order. “Show me you can behave.”</p>
+      <p>You kneel, dress pooling around your hips, wrists still overhead on the roof handle. You sink onto them, moaning at the stretch, at the fullness. Leather squeaks beneath your knees.</p>
+      <p>They grip your waist and set a punishing rhythm. Up, down, grinding circles. You cling to the handle, fingers white. Their gaze never leaves your face.</p>
+      <p>“You take what I give and ask for nothing,” they say.</p>
+      <p>“Yes,” you gasp.</p>
+      <p>“Beg anyway.”</p>
+      <p>“Please,” you cry, rocking harder. “Please, please, please.”</p>
+      <p>“Touch yourself.”</p>
+      <p>One hand slips from the handle, sliding between where your bodies join. You rub quick tight circles, begging your release with panting breaths.</p>
+      <p>They hold your gaze. “Do not come until I say so.”</p>
+      <p>Tears prick your eyes. Pleasure builds, blinding. You choke a sob, desperate to obey.</p>
+      <p>“Now,” they whisper.</p>
+      <p>You break. Muscles clamp, vision whites out. You cry their name into the air, trembling around them. They follow with a growl, pulse throbbing inside you, hands bruising your hips.</p>
+      <p>Silence crashes down. Only the hum of tires on asphalt and your ragged breathing remain.</p>
+      <p>They stroke your thigh, soothing. “Worth misbehaving?”</p>
+      <p>You nod, still shaking.</p>
+      <p>“Good.” They kiss your temple. “Because next time, the consequences will be harder.”</p>
+      <p>The car slows. You start fixing your clothes. Your partner tucks you in, fastening your seat belt, smoothing hair from your eyes.</p>
+      <p>The partition drops. The driver never turns around.</p>
+      <p>Outside your building, they exit first. You step onto the sidewalk on trembling legs.</p>
+      <p>Before the car pulls away, they lean close, whispering so only you can hear.</p>
+      <p>“Are you going to be defiant next time?”</p>
+      <p>You smirk, playfully, “What you call defiance,” you breathe, “I call foreplay.”</p>
+      <p>You smile rebelliously, even after just being punished.</p>
+      <p>They laugh, “How did I know you were going to say that?”</p>
+      <p>As they press a final kiss to your cheek, one thought repeats in your mind.</p>
+      <p>Tomorrow, you’re definitely going to misbehave again.</p>
+    </div>
