--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #960F2A;
+      background-color: #950606;
       font-family: 'Montserrat', sans-serif;
       color: white;
       margin: 0;
@@ -90,11 +90,11 @@
 
   <div class="image-container">
     <div class="image-half">
-      <img src="/images/punish_me_female.jpg" alt="Female Punish Me">
+      <img src="/images/the_punish_me_female.jpg" alt="Female Punish Me">
     </div>
     <div class="divider"></div>
     <div class="image-half">
-      <img src="/images/punish_me_male.jpg" alt="Male Punish Me">
+      <img src="/images/the_punish_me_male.jpg" alt="Male Punish Me">
     </div>
   </div>
     <h2>Power Dynamic Arc</h2>
