--- a/premium/erotic-blueprint_punish_me.html
+++ b/premium/erotic-blueprint_punish_me.html
@@ -176,7 +176,7 @@
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
   Being ignored, emotionally neglected, or punished mechanically. Nothing kills the vibe faster than domination that lacks nuance. If a partner becomes predictable or disengaged, they’ll push harder — and eventually check out when they’re not met.</p>
       <div class="section">
-      <h2>🔥 Erotic Short Story</h2>
+      <h2>Erotic Short Story</h2>
       <p>The ride home is only fifteen minutes, yet you have already spent ten of them poking at the person beside you.</p>
       <p>It started at dinner. They warned you, quiet look across the table, palm sliding over your thigh, don’t flirt with anyone else. You agreed, then proceeded to do exactly that. Nothing dramatic. Just a lingering touch on a waiter’s wrist, a laugh a little too bright at a stranger’s joke, a flash of tongue on the rim of your glass while staring straight into your partner’s eyes.</p>
       <p>Bratting. You do it on instinct.</p>
