--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Provoker – Erotic Blueprint</title>
+  <title>The Provoker – Erotic Blueprint</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     body {
@@ -116,7 +116,7 @@
 
   <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
 
-  <h1>Provoker</h1>
+<h1 style="color: #e1bf78; text-shadow: 0 0 5px #ff5e99, 0 0 10px #ff5e99;">Provoker</h1>
 
   <div class="quote">“It is not by obeying the rules that we come to know pleasure, but by breaking them.” — Anaïs Nin</div>
 
