--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -116,17 +116,17 @@
 
   <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
 
-<h1 style="color: #e1bf78; text-shadow: 0 0 5px #ff5e99, 0 0 10px #ff5e99;">Provoker</h1>
+<h1 style="color: #e1bf78; text-shadow: 0 0 5px #ff5e99, 0 0 10px #ff5e99;">The Provoker</h1>
 
   <div class="quote">“It is not by obeying the rules that we come to know pleasure, but by breaking them.” — Anaïs Nin</div>
 
   <div class="image-container">
     <div class="image-half">
-      <img src="../images/provoker_female.jpg" alt="Provoker Female">
+      <img src="../images/the_provoker_female.jpg" alt="Provoker Female">
     </div>
     <div class="divider"></div>
     <div class="image-half">
-      <img src="../images/provoker_male.jpg" alt="Provoker Male">
+      <img src="../images/the_provoker_male.jpg" alt="Provoker Male">
     </div>
   </div>
 
