--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
-  <h1>Provoker</h1>
+  <h1>The Provoker</h1>
   <p class="slogan">You press buttons… on purpose.</p>
   <p class="quote">“It is not by obeying the rules that we come to know pleasure, but by breaking them.” – Anaïs Nin</p>
 
