--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -1,1 +1,269 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Claimed & Trained – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #950606;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 3px #ff758f, 0 0 3px #ff758f;
+      margin-bottom: 20px;
+      font-size: 38px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #ffb3c1;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #ff8ea6;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>The Claimed & Trained</h1>
+  <p class="slogan">The deeper you give in the more pleasure you’ll feel. Don’t think, just obey.</p>
+  <p class="quote">“The harder the mindfucking, the better.” – Anonymous</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/the_claimed_and_trained_female.jpg" alt="Female Claimed & Trained">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/the_claimed_and_trained_male.jpg" alt="Male Claimed & Trained">
+    </div>
+  </div>
+    <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong><br>
+  Claimed & Trained submissives do not enter relationships casually, they attach. Their arc is one of deepening surrender. They crave consistency, ritual, and psychological conditioning. Once bonded, they don’t want to think, they want to obey.</p>
+
+  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <ul>
+    <li>Submissive stays submissive → 📈 Smooth and steep upward growth</li>
+    <li class="sub">They flourish with structure, thrive on repetition, and deepen trust over time</li>
+    <li>Submissive tries to dominate → 📉 Abrupt breakdown</li>
+    <li class="sub">They feel emotionally lost and sexually repelled by the role reversal</li>
+    <li>Partner becomes inconsistent → ⚠️ Sharp volatility</li>
+    <li class="sub">Triggers abandonment fears and conditioning withdrawal</li>
+    <li>Dominant relinquishes control → 🚨 Crash</li>
+    <li class="sub">Loss of identity. Erotic regression. Dynamic collapses</li>
+  </ul>
+
+  <p><strong>Ideal Dynamic:</strong><br>
+  They thrive in D/s relationships with clear rules, devoted rituals, and one trusted authority figure. The healthiest bond is built on mutual care, but with complete erotic hierarchy, they serve, and they want to. Their devotion grows through discipline and reward.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>Claimed & Trained submissives are aroused by structure, power, and the feeling of being reshaped. Their desire is fueled by being owned, molded, and rewired, often willingly.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Imprintation Theory:</strong> Their earliest arousal may have been linked to moments of being told what to do or being praised for obedience, permanently tying submission to pleasure.</li>
+    <li><strong>Exposure Therapy Theory:</strong> Some use erotic submission as a way to reclaim power over chaotic or confusing early relationships. Structure becomes safety.</li>
+    <li><strong>Self-Esteem Theory:</strong> They associate being controlled with being valued. When someone takes charge of them with precision, they feel seen.</li>
+    <li><strong>Mimetic Desire Theory:</strong> They may have unconsciously mirrored powerful submissive figures from media or personal relationships, learning that obedience could be beautiful.</li>
+    <li><strong>Blank Slate Theory:</strong> They were often taught that being “good” meant following rules. Their desire evolved from wanting to please into craving surrender.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <p>Words matter. Control them with these:</p>
+  <ul>
+    <li>“Obey.”</li>
+    <li>“Good pet.”</li>
+    <li>“You don’t think unless I tell you to.”</li>
+    <li>“This is what you were made for.”</li>
+    <li>“You’re mine.”</li>
+    <li>“Only I get to decide.”</li>
+    <li>“Beg.”</li>
+    <li>“You come when I say.”</li>
+    <li>“You don’t need to think, you just need to listen.”</li>
+    <li>“Say thank you.”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>Shuts down quickly, especially when control is removed</li>
+    <li>May regress emotionally or become anxious and clingy</li>
+    <li>Feels abandoned if their dominant becomes inconsistent or emotionally distant</li>
+    <li>Tries to fix things by submitting harder, even when it’s not healthy</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>A dominant who suddenly becomes passive or unclear</li>
+    <li>Being left in charge or asked to “figure it out”</li>
+    <li>Feeling like a burden</li>
+    <li>Praise being withheld with no explanation</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Needs clarity, ritual, and reassertion of hierarchy</li>
+    <li>Calms when given direction and structure — even symbolic commands help</li>
+    <li>Responds well to emotional aftercare and verbal reinforcement of roles</li>
+    <li>Thrives when the dominant reclaims their authority with care</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong><br>
+  Learning to advocate for their needs without framing it as “being bad.” Understanding that asking for structure is not the same as topping from the bottom. Trusting that devotion is not earned through suffering.</p>
+
+  <h2>Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong><br>
+  What others crave is how completely they give in. Their obedience feels earned. They respond to training with arousal, reverence, and loyalty. Their superpower is how they eroticize being reshaped, they crave the voice that turns them into a better version of themselves.</p>
+
+  <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+  Being asked to lead, improvise, or dominate. Partners who don’t follow through on rules. A dominant who stops using commands and starts saying “whatever you want.” Without structure, they spiral. Without ownership, they seek something new.</p>
+    <div class="section">
+    <h2>Erotic Short Story</h2>
+    <p>You weren’t planning to go inside tonight.</p>
+    <p>The party was winding down. You had your drink in hand, your jacket half on, and then you heard the voice.</p>
+    <p>Not loud. Not even aimed at you. Just a word tossed out mid-conversation, a tone too smooth, too confident. It made your stomach drop and your skin flush. You turned without meaning to. And there they were.</p>
+    <p>They didn’t even look at you directly. Not at first. They just tilted their head slightly, like they knew exactly what reaction they’d cause. Your legs carried you closer before you made the choice. Or maybe the choice had already been made for you.</p>
+    <p>They caught your gaze and smiled. The kind of smile that made your thoughts slow down. The kind that felt like gravity.</p>
+    <p>“I knew you’d come find me,” they said.</p>
+    <p>You opened your mouth to deny it, but no sound came out.</p>
+    <p>“No more thoughts. No more futile attempts to resist me. You want to listen to my words because I speak the truth. Your subconscious mind wants to give in now and drop down into a deep trance for me.”</p>
+    <p>That was the last normal moment of the night.</p>
+    <p>You don’t know how you ended up on your knees.</p>
+    <p>One second, you were standing near the kitchen. Then there was a door. A hallway. Their fingers brushing lightly against your wrist. And now you’re here, in a room with dim lighting, velvet furniture, a faint trace of incense in the air. Knees to the floor. Heart pounding.</p>
+    <p>They don’t touch you. They just circle, slow and sure.</p>
+    <p>“Do you know why this works so well on you?” their voice hums against your skin. “Why every time you hear me, your thoughts melt?”</p>
+    <p>You swallow hard.</p>
+    <p>“It’s not just because I’m good at this. It’s because you were born for this. You were made to submit. And I know how to take full advantage of your submissiveness.”</p>
+    <p>They pause behind you. You feel the heat of their breath against your neck.</p>
+    <p>“You can try to pretend you’re in control. But the second I speak like this…” They drag the tip of a fingernail up your spine, slow and taunting. “You start to sink.”</p>
+    <p>You do.</p>
+    <p>It’s slow, like warm water creeping up your chest. Like your mind is folding inward. You try to resist, just to see if you can, but the moment you hear, “Good toy,” something inside you cracks open. You’re gone.</p>
+    <p>“You don’t even need commands,” they murmur. “You’ve been trained to crave them.”</p>
+    <p>You nod, dazed. The word trained echoes through your brain like a bell.</p>
+    <p>They kneel beside you and grip your chin. “Open your mouth.”</p>
+    <p>You do.</p>
+    <p>They slide two fingers between your lips, watching the way you take them. Their eyes darken.</p>
+    <p>“Look at you,” they purr. “So fucking eager. You pretend you’re not desperate to please me, but this mouth tells the truth.”</p>
+    <p>They pull back, and you whimper.</p>
+    <p>“Oh, you want more? You want to be used? Touched? Fucked?” Their hand closes around your throat. “Then earn it.”</p>
+    <p>You nod quickly. Too quickly.</p>
+    <p>“Say it,” they demand.</p>
+    <p>“I want to earn it. I want to be good.”</p>
+    <p>They smile like they’ve already won. Because they have.</p>
+    <p>The next part happens in flashes.</p>
+    <p>You’re dragged to your feet. Hands against the wall. Shirt ripped over your head. Their voice constant in your ear.</p>
+    <p>“You’re going to thank me for every single thing I do to you.”</p>
+    <p>They unbutton your pants with one hand and slap your ass with the other.</p>
+    <p>You moan.</p>
+    <p>“Thank me.”</p>
+    <p>“Thank you.”</p>
+    <p>Harder this time. You flinch and feel yourself throbbing.</p>
+    <p>“Thank me properly.”</p>
+    <p>“Thank you for using me.”</p>
+    <p>You’re pushed over the arm of a chair, legs kicked apart. Something cold and slick pressed between your cheeks, or lips, or folds. You lose track. You lose everything but their voice.</p>
+    <p>“Don’t move unless I tell you.”</p>
+    <p>You don’t.</p>
+    <p>They slap you again. Then again. Each one sharp, then soothing. Fingers stroking where they hit. Kissing the marks. Then punishing you harder.</p>
+    <p>“You’re such a dirty little whore,” they hiss. “So obedient. So easy.”</p>
+    <p>You moan again. They laugh.</p>
+    <p>“You love it when I degrade you.”</p>
+    <p>You do.</p>
+    <p>“And you love it when I praise. Isn’t that right my good toy?”</p>
+    <p>You do.</p>
+    <p>They reach around and grab your hair, pulling with just the right amount of force.</p>
+    <p>“Say it.”</p>
+    <p>“I’m your good toy. Your obedient slut.”</p>
+    <p>They chuckle darkly. “That’s better.”</p>
+    <p>Their fingers speed up, knowing exactly how to edge you. They pause just before you tip over.</p>
+    <p>“Beg for it.”</p>
+    <p>“Please,” you gasp. “Please let me come. Please, I’ll be so good. I’ll do anything.”</p>
+    <p>“Oh, I know you will. Because I’ve trained you that way.”</p>
+    <p>They lean in close.</p>
+    <p>“You come when I say, and not before. Nod if you understand.”</p>
+    <p>You nod.</p>
+    <p>“Say it.”</p>
+    <p>“I come when you say.”</p>
+    <p>They stroke you again. Your legs shake.</p>
+    <p>“Say thank you.”</p>
+    <p>“Thank you.”</p>
+    <p>“For what?”</p>
+    <p>“For using me. For owning me. For turning me into yours.”</p>
+    <p>“Good pet.”</p>
+    <p>Their tone shifts. Velvet over iron. They slow to a whisper.</p>
+    <p>“Now listen carefully. When I say the word drop, you’re going to come. And every time I say it again, you’ll feel it all over again. Even days from now. You won’t know when it’s coming. You won’t know how to stop it. Because you don’t want to.”</p>
+    <p>You moan, breathless.</p>
+    <p>They place their mouth to your ear.</p>
+    <p>“Drop.”</p>
+    <p>And it hits like lightning. You scream. The orgasm rips through you like a spell cast straight to the center of your brain. Every muscle tightens, then breaks apart. You collapse into their arms, boneless, mindless, wrecked.</p>
+    <p>They kiss your forehead.</p>
+    <p>“Good pet. That’s what happens when you give in.”</p>
+    <p>You can’t speak. You’re floating. Wet. Raw. Owned.</p>
+    <p>They clean you up slowly. Gently. Dress you like a doll. Hold you in their lap, pet your hair, whisper more affirmations.</p>
+    <p>“You’re mine. You’ve always been mine.”</p>
+    <p>You believe them.</p>
+    <p>You drift in their arms, whispering thank you again and again. Not because they make you. Because you want to.</p>
+    <p>And somewhere deep in your mind, a quiet part of you smiles.</p>
+    <p>Because giving in makes you feel so free.</p>
+  </div>
+</body>
+</html>
