--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Claimed & Trained – Erotic Blueprint</title>
+  <title>Claimed & Trained – Erotic Blueprint</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -84,17 +84,17 @@
 </head>
 <body>
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
-  <h1>The Claimed & Trained</h1>
+  <h1>Claimed & Trained</h1>
   <p class="slogan">The deeper you give in the more pleasure you’ll feel. Don’t think, just obey.</p>
   <p class="quote">“The harder the mindfucking, the better.” – Anonymous</p>
 
   <div class="image-container">
     <div class="image-half">
-      <img src="/images/the_claimed__trained_female.jpg" alt="Female Claimed & Trained">
+      <img src="/images/claimed__trained_female.jpg" alt="Female Claimed & Trained">
     </div>
     <div class="divider"></div>
     <div class="image-half">
-      <img src="/images/the_claimed__trained_male.jpg" alt="Male Claimed & Trained">
+      <img src="/images/claimed__trained_male.jpg" alt="Male Claimed & Trained">
     </div>
   </div>
     <h2>Power Dynamic Arc</h2>
